# mmft

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/fasta/: extract.rs  filter.rs  gc.rs  length.rs  merge.rs  min.rs  mod.rs  n50.rs  number.rs  regex.rs  reverse.rs  sample.rs  split.rs  translate.rs
src/utils/: error.rs  lex_min.rs  mod.rs  parse.rs  revcomp.rs  stdin.rs  translate.rs
