[package]
name = "mmft"
version = "0.2.0"
authors = ["Max Brown <max.carter-brown@aru.ac.uk>"]
edition = "2021"
license = "MIT"
description = "A minimal fasta toolkit."
keywords = ["fasta", "tools"]
categories = ["command-line-utilities", "science"]
homepage = "https://github.com/tolkit/mmft"
documentation = "https://github.com/tolkit/mmft"
repository = "https://github.com/tolkit/mmft"

[dependencies]
bio = "2.0.3"
atty = "0.2.14"
thiserror = "1.0.64"
anyhow = "1.0.89"
regex = "1.11.0"
rand = "0.9.0-alpha.2"
clap = { version = "4.5.19", features = ["cargo"] }
lexical-sort = "0.3.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
