[package]
name = "mmft"
version = "0.3.0"
authors = ["Max Brown <max.carter-brown@aru.ac.uk>"]
edition = "2021"
license = "MIT"
description = "A minimal fasta toolkit."
keywords = ["fasta", "tools"]
categories = ["command-line-utilities", "science"]
homepage = "https://github.com/tolkit/mmft"
documentation = "https://github.com/tolkit/mmft"
repository = "https://github.com/tolkit/mmft"

[dependencies]
noodles-fasta = "0.46.0"
atty = "0.2.14"
thiserror = "2.0.8"
anyhow = "1.0.94"
regex = "1.11.1"
rand = "0.9.0-beta.1"
clap = { version = "4.5.23", features = ["cargo"] }
lexical-sort = "0.3.1"
noodles-core = "0.15.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
